almost finish creditcard

--- a/ProjetEvent/defaultMenuItems.plist
+++ b/ProjetEvent/defaultMenuItems.plist
@@ -4,6 +4,14 @@
 <array>
 	<dict>
 		<key>title</key>
+		<string>Credit Card</string>
+		<key>selector</key>
+		<string>creditCards:</string>
+		<key>cellType</key>
+		<string>MenuItemTableViewCell</string>
+	</dict>
+	<dict>
+		<key>title</key>
 		<string>Profile</string>
 		<key>selector</key>
 		<string>profile:</string>
